2000-04-21  Lauris Kaplinski  <lauris@ariman.ee>

	* src/mdi-document.c: extract ACTIVE_DOCUMENT for ACTIVE_DESKTOP
	  instead of MDIChild

	* glade/sodipodi.glade: Popup menu

	* src/event-context.c: (sp_event_context_private_root_handler)
	  Popup menu on button 3, if event is not consumed

	* src/zoom-context.c: (sp_zoom_context_root_handler)
	  Assign zoom_out to Shift+Button1 to free Button3 for popup

	* src/draw-context.c: (sp_draw_context_root_handler)
	  Invoke parent handler, if event is not consumed

2000-04-21  Lauris Kaplinski  <lauris@ariman.ee>

	* configure.in: removed plugins/Makefile (not yet folks!)

	* src/bonobo/embeddable-document.c (sp_embeddable_document_factory):
	switched to original gnome-print-context instead of FRGBA

2000-04-21  Michael Meeks  <michael@helixcode.com>

	* configure.in (have_bonobo): add -lbonobo-print

	* src/bonobo/embeddable-document.c (sp_embeddable_document_factory):
	add the print interface.

2000-04-21  Fatih Demir	<kabalak@gmx.net>

	* configure.in : Added tr to ALL_LINGUAS .
	
	* sodipodi.desktop : Added [tr] ..

2000-04-20  Lauris Kaplinski  <lauris@ariman.ee>

	* glade/sodipodi.glade: toggling rulers and scrollbars on/off
	* desktop.c: construct it by hand, borders can be removed
	* mdi-desktop.c: new logic for activating desktops (bonobo needed it)
	* bonobo/embeddable-document.c: removed MDI refcounting
	* bonobo/embeddable-desktop.c: added MDI refcounting, active desktop
	  management and hiding borders, if not active

2000-04-20  Andreas Hyden  <a.hyden@cyberpoint.se>

	* sodipodi.desktop: Added Swedish translation.
	* configure.in: Added sv to ALL_LINGUAS.

2000-04-19  Lauris Kaplinski  <lauris@ariman.ee>

	* configure.in: Added chack for GnomePrintRBuf and GnomePrintFRGBA
	* sp-shape.c: if FRGBA is present, do not emulate alpha
	* file.c: print via FRGBA, if present
	* dialogs/export.c: export via RBuf, if present
	* sp-object.c: fixed infinite loop in allocating id-s
